   - *Obsolete features* are features which may be removed in a future version of the model, because they are superseded
   - *Bugs removed* will list any known errors that were found to affect the previous version which have been corrected in this version

** Released versions
*** Version 7.0.0
**** New Features
***** Health modelling
The health impact calculations from UCL and LSHTM's HIDEEM model have been integrated into the NHM.

The =ref.health-impact-of= function allows you to compute the health impact in terms of morbidity QALYS, mortality QALYS, or avoided NHS costs which result from a given change in internal temperature or fabric permeability as a result of a measure being applied.

Some supporting functions have been added to calculating the inputs to =ref.health-impact-of=.

=ref.house.permeability= represents the permeability of the house (air change rate / area).

=ref.house.sit= and =ref.house.sit-rebate= predict a realistic internal temperature in a house.

***** house.surface-area

A function =ref.house.surface-area= has been added, this returns the area of the external envelope of the dwelling (roof, floor, walls, windows and doors).

*** Version 6.5.5
**** New Features

Put back the /desired-heat-months/ property on =ref.action.set-heating-temperatures=.

This was removed in the SAP 2012 update.

This property has different behaviour to before. It now explcitly sets which months the heating will be on for. It has no effect in SAP2012 mode.

*** Version 6.5.4
**** New Features
***** Heat loss roofs and ground floors for flats
If a flat has a storey which is the top floor of its building, then it has a heat loss roof.
Similarly, its bottom storey is the bottom floor of its building (in the EHS, it is either the basement or ground floor), it will have a heat loss floor.

The measure suitability for =ref.measure.loft-insulation=, =ref.measure.solar-dhw= and =ref.measure.solar-photovoltaic= now admits flats if and only if they have a heat loss roof.