@@ -45,6 +45,39 @@
       <title>Version 7.0.0</title>
       <sect3 id="new-features">
         <title>New Features</title>
+        <sect4 id="combinations-choice">
+          <title>Combinations Choice</title>
+          <para>
+            To help with performance issues being created by using the
+            ~combinations macro within templates combinations choice has
+            been added to avoid the need to macro expand the scenario
+            before validation. This expansion now happens when executing
+            the simulaiton see
+            <xref linkend="ref.combination.choice"/>.
+          </para>
+        </sect4>
+        <sect4 id="products-modelling">
+          <title>Products Modelling</title>
+          <para>
+            To enable modelling of some products policy changes to the
+            NHM some new scenario language elements have been added.
+          </para>
+          <para>
+            For modelling of changes to energy used by appliances and
+            cooking the
+            <xref linkend="ref.measure.set-adjustment-terms"/> function
+            allows you to apply a linear correction factor to the energy
+            use of appliances or overaching energy use coooking with
+            reference to SAP2012 L10.
+          </para>
+          <para>
+            For modelling the altertion of lighting elements within a
+            house <xref linkend="ref.measure.lighting"/> has been added
+            to alter the types of light within a house and
+            <xref linkend="ref.house.lighting-proportion"/> has been
+            added to allow reporting on this.
+          </para>
+        </sect4>
         <sect4 id="health-modelling">
           <title>Health modelling</title>
           <para>
